test/cases/variable_shadowing.3.zig
pub fn main() void {
    var i = 0;
    for ("n") |_, i| {
    }
}

// error
//
// :3:19: error: redeclaration of local variable 'i'
// :2:9: note: previous declaration here
